# syncronus

./: LICENSE  README.md  pyproject.toml
syncronus/logger/: __init__.py  logger.py
syncronus/sources/: README.md  __init__.py  base.py  oauth2.py  spotify.py  tidal.py
syncronus/sources/spotify/: __init__.py  client.py
syncronus/sources/tidal/: __init__.py  client.py
tests/: README.md  conftest.py  test_sources_exports.py  test_spotify_auth.py  test_spotify_playlists.py  test_spotify_sync.py  test_tidal_auth.py  test_tidal_playlists.py  test_tidal_sync.py  test_token_refresh.py  utils.py
tests/spotify/: connection_test.py
